data analysis done

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -1667,11 +1667,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "427cbb5a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved successfully as 'Cleaned_Ecommerce_Dataset.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(\"Cleaned_Ecommerce_Dataset.csv\", index=False)\n",
+    "print(\"Cleaned dataset saved successfully as 'Cleaned_Ecommerce_Dataset.csv'\")"
+   ]
   }
  ],
  "metadata": {
