--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -343,6 +343,35 @@
     "On further inspection, the dataset exhibits deterministic relationships between variables — e.g., Profit and Shipping_Cost are directly proportional to Sales.\n",
     "Hence, the model performance appears ideal because the target variables are linearly dependent on the input features, not due to overfitting or data leakage."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "064ebaf9",
+   "metadata": {},
+   "source": [
+    "save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "41ae5b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(pipeline, \"ecommerce_sales_profit_model.joblib\")\n",
+    "print(\"Model saved\")"
+   ]
   }
  ],
  "metadata": {
